--- a/string.ipynb
+++ b/string.ipynb
@@ -901,7 +901,7 @@
    "source": [
     "num=\"0123456789\"\n",
     "\n",
-    "num[0:len(num):2]"
+    "num[0:len(num):2] #want to print number with 1 gap."
    ]
   },
   {
@@ -942,6 +942,27 @@
    ],
    "source": [
     "list(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict['1234']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num=\"1234\"\n",
+    "dict[num]"
    ]
   },
   {
